Revert "CDRA-870: Alignment issue on Admin dashboard."
This reverts commit 7dc86a50c0dc0b87df1470884766e5eb70a64412.

--- a/web-app/css/crowdera.css
+++ b/web-app/css/crowdera.css
@@ -1302,25 +1302,6 @@ ul.unstyled {
 .announcement-heading {
     font-size: 50px;
     margin: 0;
-    display: inline-block;
-}
-
-.for-greaterseven {
-    font-size: 31px;
-    padding-top: 17px;
-    display: inline-block;
-}
-
-.for-greaterEleven {
-    display: inline-block;
-    font-size: 24px;
-    padding-top: 26px;
-}
-
-.for-greaterFourteen {
-    display: inline-block;
-    font-size: 20px;
-    padding-top: 32px;
 }
 
 .announcement-text {
